# race

bench/: mix.exs
bench/lib/: bench.ex  client.ex
bench/output/: benchmark.html  benchmark_medium_comparison.html  benchmark_medium_rust.html  benchmark_medium_rust_elixir.html  benchmark_small_comparison.html  benchmark_small_rust.html  benchmark_small_rust_elixir.html
bench/output_parallel_1/: benchmark_parallel.html  benchmark_parallel_medium_comparison.html  benchmark_parallel_medium_rust.html  benchmark_parallel_medium_rust_elixir.html  benchmark_parallel_small_comparison.html  benchmark_parallel_small_rust.html  benchmark_parallel_small_rust_elixir.html
bench/output_parallel_10/: benchmark_parallel_small_comparison.html  benchmark_parallel_small_rust.html  benchmark_parallel_small_rust_elixir.html
bench/output_parallel_20/: benchmark_parallel_small_comparison.html  benchmark_parallel_small_rust.html  benchmark_parallel_small_rust_elixir.html
bench/output_parallel_4/: benchmark_parallel_small_comparison.html  benchmark_parallel_small_rust.html  benchmark_parallel_small_rust_elixir.html
bench/test/: bench_test.exs
elixir/: .gitignore  README.md  mix.exs
elixir/lib/: native_prime_generator.ex  race_elixir.ex
elixir/lib/race_elixir/: application.ex  endpoint.ex
elixir/native/nativeprimesgenerator/: Cargo.toml  README.md
elixir/native/nativeprimesgenerator/src/: lib.rs
elixir/test/: race_elixir_test.exs
rust/: Cargo.toml
rust/src/: main.rs
