[package]
name = "race_rust"
version = "0.1.0"
authors = ["Marco Dell'Olio <dellolio.marco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "2.0.0", features=["openssl"] }
actix-rt = "1.0"
actix = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.5"